; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_disk.c_disk_device_control.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_disk.c_disk_device_control.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STATUS_INVALID_PARAMETER = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"DISK IOCTL %d\0A\00", align 1
@STATUS_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32, i32, i32)* @disk_device_control to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @disk_device_control(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %12 = load i32, i32* %9, align 4
  %13 = ashr i32 %12, 16
  %14 = icmp ne i32 %13, 20
  br i1 %14, label %19, label %15

15:                                               ; preds = %5
  %16 = load i32, i32* %9, align 4
  %17 = ashr i32 %16, 16
  %18 = icmp ne i32 %17, 9
  br i1 %18, label %19, label %21

19:                                               ; preds = %15, %5
  %20 = load i32, i32* @STATUS_INVALID_PARAMETER, align 4
  store i32 %20, i32* %6, align 4
  br label %34

21:                                               ; preds = %15
  %22 = load i32, i32* %9, align 4
  %23 = ashr i32 %22, 2
  store i32 %23, i32* %9, align 4
  %24 = load i32, i32* %9, align 4
  %25 = and i32 %24, 4095
  store i32 %25, i32* %9, align 4
  %26 = load i32, i32* %9, align 4
  %27 = call i32 @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %26)
  %28 = load i32, i32* %9, align 4
  switch i32 %28, label %30 [
    i32 25, label %29
    i32 42, label %29
  ]

29:                                               ; preds = %21, %21
  br label %30

30:                                               ; preds = %21, %29
  %31 = load i32, i32* %9, align 4
  %32 = call i32 @unimpl(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %31)
  %33 = load i32, i32* @STATUS_INVALID_PARAMETER, align 4
  store i32 %33, i32* %6, align 4
  br label %34

34:                                               ; preds = %30, %19
  %35 = load i32, i32* %6, align 4
  ret i32 %35
}

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @unimpl(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
